@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-14T08:21:45Z",
-  "count_outdated" : 663,
-  "uniques_outdated" : 372,
-  "count" : 721,
+  "timestamp" : "2023-07-15T01:48:31Z",
+  "count_outdated" : 667,
+  "uniques_outdated" : 374,
+  "count" : 722,
   "uniques" : 412,
   "clones" : [
-    {
-      "timestamp": "2023-06-30T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 1, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-07-01T00:00:00Z",
       "count": 1,
@@ -106,9 +97,9 @@
     },
     {
       "timestamp": "2023-07-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
